force-app/main/default/objects/SVMXC__SVMX_Event__c/SVMXC__SVMX_Event__c.object-meta.xml
<CustomObject>
    <description>This object stores Calendar events for technicians that are not Salesforce users as well as equipment whose calendars are tracked for dispatching.</description>
    <label>ServiceMax Event</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceMax Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>