force-app/main/default/objects/SVMXC__SVMX_Event__c/fields/SVMXC__ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__ActivityDate__c</fullName>
    <description>Event start date</description>
    <label>ActivityDate</label>
    <type>Date</type>
</CustomField>