force-app/main/default/objects/SVMXC__SVMX_Event__c/fields/SVMXC__DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__DurationInMinutes__c</fullName>
    <description>Event duration</description>
    <label>DurationInMinutes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>