force-app/main/default/objects/SVMXC__SVMX_Event__c/fields/SVMXC__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Location__c</fullName>
    <description>Location of the event</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>