force-app/main/default/objects/SVMXC__SVMX_Event__c/fields/SVMXC__SM_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Appointment_Status__c</fullName>
    <description>The status of the Event.</description>
    <label>Appointment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>