force-app/main/default/objects/SVMXC__SVMX_Event__c/fields/SVMXC__WhatId__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__WhatId__c</fullName>
    <description>The source record related to the event</description>
    <label>WhatId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>